메뉴 쪽 random 메뉴 추천 제외 모ë모든 것 구현. 주석 달 예정